# IntroToPython

./: LICENSE  TODO.md  course_overview.md  python_cheat_sheet.ipynb
01_hello_world/: 01_getting_set_up.md  01_hello_world.md  Pandas Demo.ipynb  hello_world.ipynb
02_python_crash_course/: python_cheat_sheet.ipynb
03_microservices_intro/: microservices.md  requests_demo.ipynb
04_collections_and_loops/: 04_collections_and_loops.md
04_flask_intro/: .gitignore  Pipfile  backend.py  backend_example.py  flask_app.py  flask_intro.ipynb  run_flask.cmd  run_flask.ps1  run_flask.sh  setup.cfg  test_backend_example.py
04_flask_intro/flask_intro/: __init__.py  backend.py  util.py
04_flask_intro/flask_intro/templates/: 404.html  base.html  index.html  user.html
04_flask_intro/notebooks/: flask_intro.ipynb
04_flask_intro/test/: conftest.py  test_api.py  test_backend.py  test_flask_intro.py  test_util.py
05_functions_and_classes/presentation/: 05_functions_and_classes.html  index.html
05_functions_and_classes/src/: 05_functions_and_classes.md
06_regex/src/: 06_regex.md
