[metadata]
name = flask-intro
version = 0.0.1
description = A sample Flask microservice
long_description = file: README.md
license = MIT License
classifiers =
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    =flask_intro

[options.packages.find]
where = flask_intro
